[*] fix for scrollbar

--- a/src/global.scss
+++ b/src/global.scss
@@ -50,6 +50,7 @@ body {
 /* Blink/Webkit scrollbar */
 ::-webkit-scrollbar {
   width: 5px;
+  height: 5px;
 }
 
 ::-webkit-scrollbar-track {
